--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="notify_delete_file">Image was deleted</string>
 
     <string name="menu_rotate_title">Rotate image</string>
+    <string name="menu_more_title">More</string>
 </resources>
